Initial commit: Next.js project setup with TypeScript, Tailwind CSS, and ESLint

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-app-nextjs-temp",
+  "name": "personal-app-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
